--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.9.1
-Django==5.2.5
+Django==5.1.2
 django-ckeditor-5==0.2.18
+django-cors-headers==4.7.0
 django-filter==25.1
 djangorestframework==3.16.1
 pillow==11.3.0
